# qcmdpc_markov_ncw

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: deploy-docs.yml
qcmdpc_markov_ncw/: all.html  constant.ALPHA.html  constant.COMPRESSION_LEVEL.html  constant.EXACT_FACTORIAL_THRESHOLD.html  index.html  sidebar-items.js
qcmdpc_markov_ncw/code/: index.html  sidebar-items.js  struct.CodeDegrees.html  struct.MDPCCode.html  type.BlockDegrees.html
qcmdpc_markov_ncw/dfr/: fn.compute_dfr.html  index.html  sidebar-items.js  struct.DfrIterator.html
qcmdpc_markov_ncw/distribution/: index.html  sidebar-items.js  struct.OffsetVec.html  trait.Addable.html  trait.Convolve.html  trait.ConvolveAll.html  trait.ConvolveAllPowers.html  trait.ConvolveLeft.html  trait.ConvolveOne.html  trait.ConvolveSelf.html  trait.Normalize.html  trait.ScalarProduct.html  trait.Simplify.html  trait.TrimZeros.html  trait.TruncateDistribution.html
qcmdpc_markov_ncw/errors/: enum.Error.html  index.html  type.Result.html
qcmdpc_markov_ncw/f64log/: index.html  sidebar-items.js  struct.F64Log.html
qcmdpc_markov_ncw/models/: enum.STState.html  enum.STUBState.html  index.html  sidebar-items.js  struct.STInitialStateModel.html  struct.STModel.html  struct.STUBModel.html  struct.STUBSpecificCounterModel.html  struct.STUBSpecificInitialStateModel.html
qcmdpc_markov_ncw/serialize/: fn.stream_read_from_file.html  (+3 more)
src/: code.rs  dfr.rs  distribution.rs  errors.rs  f64log.rs  lib.rs  main.rs  serialize.rs  threshold.rs
(+98 files in other folders)
