[package]
name = "qcmdpc_markov_ncw"
version = "0.1.0"
edition = "2024"
authors = [
    "Sarah Arpin",
    "Jun Bo Lau",
    "Antoine Mesnard",
    "Ray Perlner",
    "Angela Robinson",
    "Jean-Pierre Tillich",
    "Valentin Vasseur",
]
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
env_logger = "0.11.8"
evalexpr = "12.0.2"
itertools = "0.14.0"
log = "0.4.27"
rand = { version = "0.9.1" }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zstd = { version = "0.13.3", features = [
    "pkg-config",
], default-features = false }
